--- a/src/components/MemoryItem.css
+++ b/src/components/MemoryItem.css
@@ -2,4 +2,17 @@
   width: 100%;
   height: 250px;
   object-fit: cover;
+  margin: 0 auto;
+  border: 1px solid var(--ion-color-primary);
+}
+
+.imageDiv {
+  margin: 0 auto;
+}
+
+.image {
+  margin-left: 20%;
+  object-fit: contain;
+  height: 100%;
+  width: 60%;
 }
